# YoutubeTrailerScraper

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  README.md  commandlinehelper.py  fix_trailer_extensions.py  investigate_tmdb_french_titles.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
src/youtubetrailerscraper/: __init__.py  _about.py  filesystemscanner.py  logger.py  moviescanner.py  tmdbsearchengine.py  tvshowscanner.py  youtubedownloader.py  youtubesearchengine.py  youtubetrailerscraper.py
tests/: conftest.py  test_cache_persistence.py  test_cli.py  test_env_loading.py  test_filesystemscanner.py  test_fix_trailer_extensions.py  test_import.py  test_logger.py  test_moviescanner.py  test_scanner_coverage.py  test_tmdb_integration.py  test_tmdbsearchengine.py  test_tvshow_has_subdirectories.py  test_tvshowscanner.py  test_youtubedownloader.py  test_youtubesearchengine.py  test_youtubetrailerscraper.py
